# quantum-chess-game

./: README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: android-market-release.yml  build-platforms.yml  fdroid-repo.yml
docs/: index.html  readme.md
docs/fdroid/metadata/: com.quantumbilling.quantumchess.yml
docs/fdroid/repo/: entry.json  index-v1.json  index-v2.json  index.html  index.xml
docs/fdroid/repo/status/: running.json  update.json
docs/game/: index.html
docs/game/assets/: index-BoeZ30pV.js  index-BvjMQS1B.css  index-CeEefPzP.js  index-DZjBHSWl.js  index-LtP9Y7gP.css  index-_7MK6J0X.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
web/: index.html  package-lock.json  package.json
web/src/: main.js
web/src/input/: llm-agent.js
web/src/styles/: main.css
